--- a/server/client/game.html
+++ b/server/client/game.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <button>Старт!</button>
+    <button id="start">Старт!</button>
     <section class="game_field">
         <div class="field">
             <table id="tb">
