--- a/server/client/game.html
+++ b/server/client/game.html
@@ -61,7 +61,8 @@
             </div>
         </div>
     </section>
-    <button>Предыдущие игры</button>
+    <button id="prev_game">Предыдущие игры</button>
+    <div id="prev"></div>
     <script src="js/script2.js"></script>
 </body>
 </html>
